{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "BlitControls",
            "id": "3720c848-c42d-43a2-ac62-ca80bae506bf",
            "actions": [
                {
                    "name": "Touch",
                    "type": "PassThrough",
                    "id": "fc309665-6002-429b-88b3-53b9abb414f3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchClick",
                    "type": "Button",
                    "id": "2905de70-2dd0-4f54-948c-fff2b100b61b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "15441a03-7199-4446-8c70-c1cb0eb68bf4",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9422b6bd-b3ee-40c9-bbca-1b097ff67bcc",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}